# wiki_search_agent

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml  pytest.ini  run_tests.py
.github/workflows/: ci.yml
app/: config.py
app/api/: batch.py  main.py  routes.py
app/core/: llm_chain.py  retriever.py
scripts/: build_embeddings.py  fetch_wiki.py
tests/: conftest.py  test_api.py  test_api_integration.py  test_build_embeddings.py  test_config.py  test_fetch_wiki.py  test_integration.py  test_llm_chain.py  test_rag_integration.py  test_retriever.py
